# s3-gateway

./: README.md  docker-compose.yml
go/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  go.mod  main.go
go/auth/: signature.go
go/config/: config.go
go/handlers/: bucket.go  helpers.go  multipart.go  object.go  router.go
go/logger/: logger.go
go/storage/: filestorage.go
go/xmlresp/: xmlresp.go
php/: .env.example  Dockerfile  README.md  docker-compose.yml
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust/src/: auth.rs  config.rs  handlers.rs  main.rs  storage.rs  xml_response.rs
