[package]
name = "s3-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
http = "1"

[profile.release]
opt-level = 3
lto = true